# init_trial

./: README.md  bash.sh  instru.docx  rl_navigation.tar.xz
drone_indoor_fly/: README.md  m.txt
drone_indoor_fly/indoor_uav/: indoor_app.py  indoor_drone.py  key_cmd_monitor.py
drone_indoor_fly/indoor_uav/external_pos_source/: opti_track_source.py
drone_new/: CMakeLists.txt
drone_new/src/: rl_altitude_control.cpp  rl_altitude_control.hpp
drone_rate_control/: bash.sh  param.yaml  rl_altitude_control.cpp  rl_altitude_control.hpp  rl_lib.cpp  rl_navi.launch
drone_self_flip/: instroduction.txt  param.yaml  rl_altitude_control.cpp  rl_altitude_control.hpp  rl_lib.h
gazebo_listener/: CMakeLists.txt  Groundtruth.pb.h  listener.cc  nohup.out
matlab_analysis/: rosbag_analysis.m
rl_control-uav/indoor_uav/: indoor_drone.py  thread.py
rl_navigation/: CMakeLists.txt
rl_navigation/src/: rl_altitude_control.cpp  rl_altitude_control.h  rl_altitude_control.hpp
rl_python/: DDPG_valid.py  trained_with_random.pt
